# de-challenge-tesla

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
answers/: top_earthquakes.csv
app/: __main__.py  earthquake.py  task.py
app/models/: dao.py  tables.py
test/: test_earthquake.py  test_models.py
tests/: test_earthquake.py  test_models.py
