[project]
name = "de-challenge-tesla"
version = "0"
description = "Tesla's Data Engineer Challenge"
authors = [
    {name = "ZHANG, Meng", email = "stall-breezes.0t@icloud.com"},
]
dependencies = [
    "aiohttp>=3.7.4",
    "matplotlib>=3.2.2",
    "pandas>=1.0.5",
    "pyparsing>=2.4.7",
    "SQLAlchemy>=1.3.18",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "yapf>=0.32.0",
    "setuptools-git-versioning>=1.9.2",
    "pylint>=2.13.5",
]
[tool.pdm]
includes = ["app"]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}.post{ccount}+{sha}"
dirty_template = "{tag}.post{ccount}+{sha}.dirty"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov src --cov-report xml:coverage.xml --cov-report term-missing"
testpaths = [
  "tests",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
force_single_line = true

[tool.pyright]
pythonVersion = "3.10"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "__pypackages__"
]
ignore = [
    "**/node_modules",
    "**/__pycache__",
    "__pypackages__"
]
extraPaths = ["__pypackages__/3.10/lib/"]
